[package]
name = "std3"
version = "0.1.23"
edition = "2021"
authors = [
    "Матвей Т <https://github.com/AtomicGamer9523>"
]
rust-version = "1.57.0"
description = "Standard library for operating systems, useful for rust-osdev"
license = "MIT"
repository = "https://github.com/AtomicGamer9523/std3"
exclude = [
    ".gitignore",
    ".hgignore",
    "/doc/**",
    "/.github/**"
]


[dependencies.spin]
version = "0.9.4"
package = "spin"
path = "./spin"
features = []

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.x86_64]
optional = true
package = "x86_64"
path = "./x86_64"
version = "0.14.10"

[dependencies.uart_16550]
optional = true
package = "uart_16550"
path = "./uart_16550"
version = "0.2.18"

[dependencies.volatile]
optional = true
package = "volatile"
path = "./volatile"
version = "0.4.5"

[dependencies.bootloader]
git = "https://github.com/AtomicGamer9523/bootloader"
features = [
    "map_physical_memory"
]
version = "0.9.8"


[features]
default = ["x86_64", "uart_16550"]
full = ["x86_64", "uart_16550", "volatile", "reexport", "rinux"]

volatile = ["dep:volatile"]
x86_64 = ["dep:x86_64"]
uart_16550 = ["dep:uart_16550"]
reexport = []
rinux = []

[package.metadata.docs.rs]
features = ["full"]
