[package]
name = "std3"
version = "0.1.23"
edition = "2021"
authors = [
    "Матвей Т <https://github.com/AtomicGamer9523>"
]
rust-version = "1.57.0"
description = "Standard library for operating systems, useful for rust-osdev"
license = "MIT"
repository = "https://github.com/AtomicGamer9523/std3"
exclude = [
    ".gitignore",
    ".hgignore",
    "/doc/**",
    "/.github/**"
]


[dependencies.spin]
path = "./spin"
features = []

[dependencies.lazy_static]
path = "./lazy_static"

[dependencies.x86_64]
path = "../bootloader/x86_64"
optional = true

[dependencies.uart_16550]
optional = true
path = "./uart_16550"

[dependencies.volatile]
optional = true
path = "../bootloader/volatile"

[dependencies.bootloader]
path = "../bootloader"
features = ["map_physical_memory"]


[features]
default = ["x86_64", "uart_16550"]
full = ["x86_64", "uart_16550", "volatile", "reexport", "rinux"]

volatile = ["dep:volatile"]
x86_64 = ["dep:x86_64"]
uart_16550 = ["dep:uart_16550"]
reexport = []
rinux = []
qemu = []

[package.metadata.docs.rs]
features = ["full"]
