[package]
name = "std3"
version = "0.1.23"
edition = "2021"
authors = [
    "Матвей Т <https://github.com/AtomicGamer9523>"
]
rust-version = "1.57.0"
description = "Standard library for operating systems, useful for rust-osdev"
license = "MIT"
repository = "https://github.com/AtomicGamer9523/std3"
exclude = [
    ".gitignore",
    ".hgignore",
    "/doc/**",
    "/.github/**"
]

[dependencies.x86_64]
path = "../memutils/x86_64"
optional = true

[dependencies.uart_16550]
version = "0.2"
optional = true

[dependencies.volatile]
optional = true
path = "../memutils/volatile"

[dependencies.bootloader]
path = "../bootloader"
features = ["map_physical_memory"]

[dependencies]
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"

[features]
default = ["x86_64", "uart_16550"]
full = ["x86_64", "uart_16550", "volatile", "reexport", "rinux"]

volatile = ["dep:volatile"]
x86_64 = ["dep:x86_64"]
uart_16550 = ["dep:uart_16550"]
reexport = []
rinux = []
qemu = []

[package.metadata.docs.rs]
features = ["full"]
