[package]
name = "lazy_static"
version = "1.5.0"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT"
description = "A macro for declaring lazily evaluated statics in Rust."
documentation = "https://docs.rs/lazy_static"
repository = "https://github.com/rust-lang-nursery/lazy-static.rs"

[dependencies.spin]
version = "0.9.4"
path = "../spin"
default-features = false
features = ["once"]